tests/ui/ast_head_aggregate_element.stderr
error[E0505]: cannot move out of `tuple` because it is borrowed
  --> tests/ui/ast_head_aggregate_element.rs:24:10
   |
21 |     let tuple = vec![term3];
   |         ----- binding `tuple` declared here
22 |     let helem = ast::head_aggregate_element(&tuple, cond);
   |                                             ------ borrow of `tuple` occurs here
23 |
24 |     drop(tuple);
   |          ^^^^^ move out of `tuple` occurs here
25 |     let _end = helem;
   |                ----- borrow later used here
